# ACDA

./: .gitignore  Atmospheric Carbon Dioxide Analysis.ipynb  README.md  pyproject.toml
.ipynb_checkpoints/: Atmospheric Carbon Dioxide Analysis-checkpoint.ipynb
data/: mlo_co2.csv  ucsd_co2.csv
data/preprocessed_data/: MaunaLoaWeeklyCO2_2019.csv  co2_weekly_mlo.txt
scripts/: data.py  preprocess.py
scripts/.ipynb_checkpoints/: data-checkpoint.py
