[tool.poetry]
name = "acda"
version = "0.1.0"
description = "Atmospheric Carbon Dioxide Analysis"
authors = ["kylepollina <kyle.pollina@datacubes.com>"]

[tool.poetry.dependencies]
python = "^3.8"
altair = "^4.0.1"
pandas = "^1.0.1"
numpy = "^1.18.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
